--- a/templates/wr.html
+++ b/templates/wr.html
@@ -6,20 +6,24 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Bootstrap CDN -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <!-- Ajax - Google CDN -->
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700" type='text/css'>
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <!-- Ajax - Google CDN -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700" type='text/css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arvo&family=Source+Code+Pro:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Source+Code+Pro:wght@700&display=swap"
+          rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arvo&family=Balsamiq+Sans&family=Source+Code+Pro:wght@700&display=swap" rel="stylesheet">
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Arvo&family=Balsamiq+Sans&family=Questrial&family=Source+Code+Pro:wght@700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Balsamiq+Sans&family=Source+Code+Pro:wght@700&display=swap"
+          rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Arvo&family=Balsamiq+Sans&family=Questrial&family=Source+Code+Pro:wght@700&display=swap"
+          rel="stylesheet">
     <link href="/static/wr.css" rel="stylesheet" type="text/css">
 
 </head>
@@ -27,148 +31,147 @@
 <body>
 <div class="container-fluid">
 
-<!-- TOP BAR ( LOGO AND BG )   -->
-  <div class="row top-bar">
-    <div class="col-md-3 col-sm-9">
-      <img id="word_rubble_logo" src="/static/word_rubble_logo1.png" alt="card box">
-    </div>
-    <div class="col-md-9 col-sm-3">
-    </div>
-      </div>
-
-
-<!-- MAIN PRODUCT IMAGE -->
-  <div class="row new_logo">
-  <div class="col-md-3">
+    <!-- TOP BAR ( LOGO AND BG )   -->
+    <div class="row top-bar">
+        <div class="col-md-3 col-sm-9">
+            <img id="word_rubble_logo" src="/static/word_rubble_logo1.png" alt="card box">
+        </div>
+        <div class="col-md-9 col-sm-3">
+        </div>
     </div>
 
-    <div class="col-md-4">
-        <img id="new_game" src="/static/New_logo.png" alt="card box">
+
+    <!-- MAIN PRODUCT IMAGE -->
+    <div class="row new_logo">
+        <div class="col-md-3">
+        </div>
+
+        <div class="col-md-4">
+            <img id="new_game" src="/static/New_logo.png" alt="card box">
+        </div>
+
+        <div class="col-md-5">
+        </div>
+
     </div>
 
-      <div class="col-md-5">
+    <div class="row frnt_product">
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-6 col-sm-6">
+            <img id="front_image" src="/static/Front_Image_Package.png" alt="card box"
+                 style="width: 620px">
+        </div>
+        <div class="col-md-2">
+        </div>
     </div>
 
-  </div>
 
-  <div class="row frnt_product">
-    <div class="col-md-4">
+    <div class="row coming_soon_message">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6">
+
+            <div id="Form_description">
+                <h2 id="sign_up_message">
+                    COMING SOON TO KICKSTARTER!
+                </h2>
+                <h1 id="get_notified">Get notified about the <span style="color:yellow">Early Bird Special</span>.</h1>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+        </div>
     </div>
-    <div class="col-md-6 col-sm-6">
-        <img id="front_image" src="/static/Front_Image_Package.png" alt="card box"
-    style="width: 620px" >
-    </div>
-      <div class="col-md-2">
-    </div>
-  </div>
 
 
-  <div class="row coming_soon_message">
+    <div class="row sign_up_form">
+        <div class="col-md-3">
+        </div>
+        <div class="col-md-6">
+
+            {% if entered_name %}
+            <div id="signup_message">
+                An email will be sent to <span style="color:yellow">{{ entered_email }}</span>
+                when the special begins.
+                <br>
+                (limited quantity available)
+            </div>
+            {% else %}
+            <div id="Form">
+
+                <form method="POST">
+                    {{ form.hidden_tag() }}
+                    <div id="name">
+                        <div id="name_label">
+                            {{ form.entered_name.label }}
+                        </div>
+                        {{ form.entered_name() }}
+                    </div>
+                    <div id="email">
+                        <div id="email_label">
+                            {{ form.entered_email.label }}
+                        </div>
+                        {{ form.entered_email() }}
+                    </div>
+                    <div id="submitbtn">
+                        {{ form.submit }}
+                    </div>
+                </form>
+
+                <ul>
+                    {% for error in form.entered_email.errors %}
+                    <li style="color:red;">&#9679 {{ error }}</li>
+                    {% endfor %}
+                </ul>
+
+                <ul>
+                    {% for error in form.entered_name.errors %}
+                    <li style="color:red;">&#9679 {{ error }}</li>
+                    {% endfor %}
+                </ul>
+
+
+            </div>
+        </div>
+        {% endif %}
+
+        <br/>
+
+
+    </div>
+
     <div class="col-md-3">
     </div>
-      <div class="col-md-6">
+</div>
 
-      <div id="Form_description">
-      <h2 id="sign_up_message">
-      COMING SOON TO KICKSTARTER!
-        </h2>
-       <h1 id="get_notified">Get notified about the <span style="color:yellow">Early Bird Special</span>.</h1>
-      </div>
+<div class="row game_overview_section">
+    <div class="col-md-1">
     </div>
-
-     <div class="col-md-3">
-    </div>
-  </div>
-
-
-  <div class="row sign_up_form">
-    <div class="col-md-3">
+    <div class="col-md-4">
+        <img id="image_back" src="/static/word_card_back_fin.png" alt="card box">
     </div>
     <div class="col-md-6">
+        <div id="gm_overview">Game Overview</div>
+        <br>
+        <div id="game_description">
+            <!--        <h2>Game Overview</h2>-->
+            <p>As the Word creator for your team,
+                your goal is to use as many of the six
+                rolled Letter blocks as possible to build
+                a word that belongs to a chosen category.
+                Rotate and place the Clue blocks around the letters to help
+                your team guess the word before the time
+                runs out. If your team fails to guess
+                the word correctly, the other team/s
+                have a chance to score. You have
+                two minutes, and GO!</p>
+        </div>
 
-{% if entered_name %}
-<div id="signup_message">
-    An email will be sent to <span style="color:yellow">{{ entered_email }}</span>
-        when the special begins.
-    <br>
-      (limited quantity available)
+    </div>
+    <div class="col-md-1" style="background-color:yellow;">
+    </div>
 </div>
-{% else %}
-<div id="Form">
-
-	<form method="POST">
-		{{ form.hidden_tag() }}
-        <div id="name">
-            <div id="name_label">
-		{{ form.entered_name.label }}
-            </div>
-		{{ form.entered_name() }}
-        </div>
-        <div id="email">
-            <div id="email_label">
-		{{ form.entered_email.label }}
-            </div>
-		{{ form.entered_email() }}
-        </div>
-        <div id="submitbtn">
-		{{ form.submit }}
-        </div>
-	</form>
-
-		<ul>
-		{% for error in form.entered_email.errors %}
-			<li style="color:red;">&#9679 {{ error }}</li>
-		{% endfor %}
-		</ul>
-
-		<ul>
-		{% for error in form.entered_name.errors %}
-			<li style="color:red;">&#9679 {{ error }}</li>
-		{% endfor %}
-		</ul>
-
-
-</div>
-    </div>
-{% endif %}
-
-<br/>
-
-
-
-    </div>
-
-      <div class="col-md-3">
-    </div>
-  </div>
-
-  <div class="row game_overview_section">
-      <div class="col-md-1">
-     </div>
-      <div class="col-md-4">
-            <img id="image_back" src="/static/word_card_back_fin.png" alt="card box">
-      </div>
-      <div class="col-md-6">
-          <div id="gm_overview">Game Overview</div>
-          <br>
-          <div id="game_description">
-<!--        <h2>Game Overview</h2>-->
-        <p>As the Word creator for your team,
-    your goal is to use as many of the six
-    rolled Letter blocks as possible to build
-    a word that belongs to a chosen category.
-    Rotate and place the Clue blocks around the letters to help
-    your team guess the word before the time
-    runs out. If your team fails to guess
-    the word correctly, the other team/s
-         have a chance to score. You have
-       two minutes, and GO!</p>
-       </div>
-
-      </div>
-      <div class="col-md-1" style="background-color:yellow;">
-      </div>
-  </div>
 
 
 </div>
